--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
     flex-direction: column;
     align-items: center;
     /* margin: 0 auto; */
-    
+
 }
 
 .wrapper {
@@ -280,6 +280,10 @@ footer {
         padding: 0 2.5rem 5rem;
     }
 
+    .heading.list-item {
+        padding: 3.5rem 1.3125rem 8.6875rem 2rem;
+    }
+
     .list-container {
         flex-direction: row;
         flex-wrap: wrap;
@@ -296,12 +300,9 @@ footer {
 
     /* Footer section */
 
-    footer {
-    }
+    footer {}
 
-    .footer-container {
-
-    }
+    .footer-container {}
 
     .footer-wrapper {
         padding: 2.25rem 2.5rem;
@@ -314,7 +315,7 @@ footer {
 
 /* Desktop responsive */
 
-@media (min-width: 1200px) and (min-width: 1440px) {
+@media (min-width: 1200px) {
 
     /* Font responsive section */
 
@@ -408,6 +409,10 @@ footer {
         padding: 0 10.3125rem 8.75rem;
     }
 
+    .heading.list-item {
+        padding: 4rem 2rem 8.625rem 2rem;
+    }
+
     .list-container {
         gap: 5rem 1.875rem;
     }
@@ -420,8 +425,7 @@ footer {
 
     /* Footer section */
 
-    footer {
-    }
+    footer {}
 
 
     .footer-wrapper {
